fixed alignment

--- a/home/static/home/css/page.css
+++ b/home/static/home/css/page.css
@@ -32,8 +32,7 @@
 }
 
 .page-content {
-    padding-left: 5%;
-    padding-right: 5%;
+    text-align: center;
     font-size: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
